// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalWithNav should override the default active tab when receiving the active tab 1`] = `
Array [
  <TabsNavItem
    active={true}
    controls="tab-1"
    data-test="tabs-nav-item"
    key="tab-1"
    onClick={[Function]}
  >
    Cursus Bibendum
  </TabsNavItem>,
  <TabsNavItem
    active={false}
    controls="tab-2"
    data-test="tabs-nav-item"
    key="tab-2"
    onClick={[Function]}
  >
    Euismod Ridiculus Parturient
  </TabsNavItem>,
  <TabsNavItem
    active={false}
    controls="tab-3"
    data-test="tabs-nav-item"
    key="tab-3"
    onClick={[Function]}
  >
    Tellus Dolor
  </TabsNavItem>,
]
`;

exports[`ModalWithNav should override the default active tab when receiving the active tab 2`] = `
<TabsBody
  data-test="tabs-body"
  navItemId="tab-1"
>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <FadeTransition
      enter={true}
      exit={false}
      in={false}
      key="tab-1"
      timeout={250}
    >
      <div
        id="tab-1"
      >
        <h2>
          Cursus Bibendum
        </h2>
        <p>
          Sed posuere consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.
        </p>
      </div>
    </FadeTransition>
  </TransitionGroup>
</TabsBody>
`;

exports[`ModalWithNav should render a list of items 1`] = `
<ModalWithNav__Dialog
  isOpen={false}
  onClose={[Function]}
>
  <Grid
    align="top"
    fillHeight={true}
  >
    <Column
      cols={3}
      gutters={false}
    >
      <ModalWithNav__Sidebar>
        <ModalWithNav__SidebarHeader>
          <ModalWithNav__SidebarTitle>
            I am a title
          </ModalWithNav__SidebarTitle>
        </ModalWithNav__SidebarHeader>
        <TabsNav
          title="I am a title"
        >
          <TabsNavItem
            active={false}
            controls="tab-1"
            data-test="tabs-nav-item"
            key="tab-1"
            onClick={[Function]}
          >
            Cursus Bibendum
          </TabsNavItem>
          <TabsNavItem
            active={false}
            controls="tab-2"
            data-test="tabs-nav-item"
            key="tab-2"
            onClick={[Function]}
          >
            Euismod Ridiculus Parturient
          </TabsNavItem>
          <TabsNavItem
            active={true}
            controls="tab-3"
            data-test="tabs-nav-item"
            key="tab-3"
            onClick={[Function]}
          >
            Tellus Dolor
          </TabsNavItem>
        </TabsNav>
      </ModalWithNav__Sidebar>
    </Column>
    <Column
      cols={9}
      gutters={false}
    >
      <ModalWithNav__MainContainer>
        <ModalWithNav__Content>
          <TabsBody
            data-test="tabs-body"
            navItemId="tab-3"
          >
            <TransitionGroup
              childFactory={[Function]}
              component="div"
            >
              <FadeTransition
                enter={true}
                exit={false}
                in={false}
                key="tab-3"
                timeout={250}
              >
                <div
                  id="tab-3"
                >
                  <h2>
                    Tellus Dolor
                  </h2>
                  <p>
                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas faucibus mollis interdum.
                  </p>
                </div>
              </FadeTransition>
            </TransitionGroup>
          </TabsBody>
        </ModalWithNav__Content>
        <ModalWithNav__Buttons>
          <Button
            data-test="btn-done"
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            Done
          </Button>
        </ModalWithNav__Buttons>
      </ModalWithNav__MainContainer>
    </Column>
  </Grid>
</ModalWithNav__Dialog>
`;

exports[`ModalWithNav should render an open modal 1`] = `
<ModalWithNav__Dialog
  isOpen={true}
  onClose={[Function]}
>
  <Grid
    align="top"
    fillHeight={true}
  >
    <Column
      cols={3}
      gutters={false}
    >
      <ModalWithNav__Sidebar>
        <ModalWithNav__SidebarHeader>
          <ModalWithNav__SidebarTitle>
            I am a title
          </ModalWithNav__SidebarTitle>
        </ModalWithNav__SidebarHeader>
        <TabsNav
          title="I am a title"
        >
          <TabsNavItem
            active={false}
            controls="tab-1"
            data-test="tabs-nav-item"
            key="tab-1"
            onClick={[Function]}
          >
            Cursus Bibendum
          </TabsNavItem>
          <TabsNavItem
            active={false}
            controls="tab-2"
            data-test="tabs-nav-item"
            key="tab-2"
            onClick={[Function]}
          >
            Euismod Ridiculus Parturient
          </TabsNavItem>
          <TabsNavItem
            active={true}
            controls="tab-3"
            data-test="tabs-nav-item"
            key="tab-3"
            onClick={[Function]}
          >
            Tellus Dolor
          </TabsNavItem>
        </TabsNav>
      </ModalWithNav__Sidebar>
    </Column>
    <Column
      cols={9}
      gutters={false}
    >
      <ModalWithNav__MainContainer>
        <ModalWithNav__Content>
          <TabsBody
            data-test="tabs-body"
            navItemId="tab-3"
          >
            <TransitionGroup
              childFactory={[Function]}
              component="div"
            >
              <FadeTransition
                enter={true}
                exit={false}
                in={false}
                key="tab-3"
                timeout={250}
              >
                <div
                  id="tab-3"
                >
                  <h2>
                    Tellus Dolor
                  </h2>
                  <p>
                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas faucibus mollis interdum.
                  </p>
                </div>
              </FadeTransition>
            </TransitionGroup>
          </TabsBody>
        </ModalWithNav__Content>
        <ModalWithNav__Buttons>
          <Button
            data-test="btn-done"
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            Done
          </Button>
        </ModalWithNav__Buttons>
      </ModalWithNav__MainContainer>
    </Column>
  </Grid>
</ModalWithNav__Dialog>
`;

exports[`ModalWithNav should use default active tab id to navigate to a tab 1`] = `
Array [
  <TabsNavItem
    active={false}
    controls="tab-1"
    data-test="tabs-nav-item"
    key="tab-1"
    onClick={[Function]}
  >
    Cursus Bibendum
  </TabsNavItem>,
  <TabsNavItem
    active={true}
    controls="tab-2"
    data-test="tabs-nav-item"
    key="tab-2"
    onClick={[Function]}
  >
    Euismod Ridiculus Parturient
  </TabsNavItem>,
  <TabsNavItem
    active={false}
    controls="tab-3"
    data-test="tabs-nav-item"
    key="tab-3"
    onClick={[Function]}
  >
    Tellus Dolor
  </TabsNavItem>,
]
`;

exports[`ModalWithNav should use default active tab id to navigate to a tab 2`] = `
<TabsBody
  data-test="tabs-body"
  navItemId="tab-2"
>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <FadeTransition
      enter={true}
      exit={false}
      in={false}
      key="tab-2"
      timeout={250}
    >
      <div
        id="tab-2"
      >
        <h2>
          Euismod Ridiculus Parturient
        </h2>
        <p>
          Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam id dolor id nibh ultricies vehicula ut id elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec id elit non mi porta gravida at eget metus.
        </p>
      </div>
    </FadeTransition>
  </TransitionGroup>
</TabsBody>
`;
